--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div id="love-box">
     <label><input type="radio" name="progress" value="all" checked><i></i><span>全部</span></label>
     <label><input type="radio" name="progress" value="completed"><i></i><span>已完成</span></label>
-    <label><input type="radio" name="progress" value="incompleted"><i></i><span>未完成</span></label>
+    <label><input type="radio" name="progress" value="incompleted"><i></i><span>要完成</span></label>
     <ul id="things"></ul>
   </div>
   <audio src="./mp3/lovesong.mp3" id="music" data-preload></audio>
